# HelloSDL

./: CMakeLists.txt  main.cpp
